# 3DSoftwareRenderer

./: .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Event.cpp  Event.hpp  EventManager.cpp  GUI.cpp  GUI.hpp  Mesh.cpp  Mesh.hpp  ObjParser.cpp  ObjParser.hpp  Observer.hpp  README.md  Rasterizer.cpp  Rasterizer.hpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneData.hpp  Transform.cpp  Transform.hpp  Triangle.cpp  Triangle.h  Utils.cpp  Utils.hpp  ZBuffer.hpp  constants.h  constants.hpp  main.cpp  sMaths.cpp  sMaths.hpp  sMesh.cpp  sMesh.hpp  (+9 more)
Models/3DS - The Legend of Zelda Majoras Mask 3D - Clock Town East/: clock_parts.dae  clocktown_east.dae  deku_flowers.dae  inn_bell.dae  mailboxes.dae  tree.dae
Models/Lara Croft/: Lara.mtl
Models/Nintendo 64 - The Legend of Zelda Ocarina of Time - Temple of Time/: TempleofTime.mtl
Models/PlayStation - Spyro the Dragon - Town Square/: Town_Square.dae
Models/Station Square/: ssact1.mtl  ssact2.mtl  ssact3.mtl  ssact4.mtl  ssact5.mtl  ssact6.mtl  wak0.dae
build-web/: 3DSoftwareRenderer.js  3DSoftwareRenderer.wasm  3DSoftwareRenderer_web.html  3DSoftwareRenderer_web.js  3DSoftwareRenderer_web.wasm  CMakeCache.txt  Makefile  cmake_install.cmake
imgui/: imgui_draw.cpp
resources/: Isometric_Game_Level_Low_Poly.mtl  Lara.mtl  Peaches Castle.mtl  concrete_cat_statue.mtl  happy_mask_salesman.mtl  spyro.mtl  spyrolevel.mtl  viking_room.mtl
src/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Event.hpp  EventCallback.hpp  EventManager.hpp  GUI.cpp  GUI.hpp  ObjParser.cpp  ObjParser.hpp  README.md  Rasterizer.cpp  Rasterizer.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  SceneData.hpp  SceneFactory.cpp  SceneFactory.hpp  main.cpp  slib.cpp  slib.hpp  smath.cpp  smath.hpp
